Update criteria and special rules in index.html

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
             <div class="section">
                 <div class="section-title">Kriteria</div>
                 <ul class="info-list">
-                    <li>Pembuatan Min Oktober 2024</li>
-                    <li>Koneksi min 50</li>
+                    <li>Pembuatan Min November 2024</li>
+                    <li>Koneksi min 30</li>
                 </ul>
             </div>
 
@@ -326,8 +326,8 @@
                 <span class="special-title">★ Spesial Rules By Zen</span>
                 <ul class="special-list">
                     <li><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg> Terkena restric pas awal sewa tetap Full payment.</li>
-                    <li><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg> Bisa 1 Rekening kalau bawa Member banyak.</li>
-                    <li><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg> Bisa Payment via USDT kalau Bawa member diatas 10.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg> Bisa 1 Rekening yang sama pas Payment</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg> Bisa Payment via USDT kalau Bawa member diatas 15,.</li>
                 </ul>
             </div>
             <div class="footer">&copy; 2024 Collect Account By <span>Zen</span>. All rights reserved.</div>
